ui/apps/vue-mri-ui-lib/src/styles/themes/_main.scss
@import '~@d4l/web-components-library/dist/d4l-ui/d4l-ui.css';

.theme-d2e {
  --color-ui-medium-border-rgb: 204, 204, 204;
  --color-mri-brand: var(--color-primary, #000080);
  --color-mri-brand-selected: none;
  --color-mri-brand-hover: #007eba;
  --color-ui-darkest-text: var(--color-text-primary, #000080);
  --color-ui-dark-text: var(--color-text-primary, #000080);
  --color-ui-medium-text: #444444;
  --color-ui-light-text: var(--color-neutral, #595757);
  --color-ui-extra-light-text: #bbbbbb;
  --color-mri-disabled-text: #c0c0c0;
  --color-mri-lightest-text: #e0e0e0;
  --color-mri-darker-border: #000080;
  --color-ui-darkest-border: #000000;
  --color-ui-extra-dark-border: #999999;
  --color-ui-dark-border: #bfbfbf;
  --color-ui-medium-border: #cccccc;
  --color-ui-light-border: #dddddd;
  --color-ui-lighter-border: #dedede;
  --color-ui-extra-light-border: #e5e5e5;
  --color-ui-lightest-border: #ffffff;
  --color-ui-darkest-bg: #000000;
  --color-ui-extra-dark-bg: #333333;
  --color-ui-dark-bg: #777777;
  --color-ui-medium-bg: #dddddd;
  --color-ui-light-bg: #e5e5e5;
  --color-ui-extra-light-bg: #f9f9f9;
  --color-ui-lightest-bg: #ffffff;
  --color-focus: #005483;
  --color-mri-token-valid-bg: var(--color-primary, #000080);
  --color-mri-select-token-no-data-bg-light: #d2e9f6;
  --color-mri-select-token-valid-bg-light: #8fdbfe;
  --color-mri-token-valid-syntax-border: #0076ad;
  --color-mri-valid-syntax-text: #ffffff;
  --color-mri-select-token-valid-text-light: #006c9e;
  --color-mri-select-token-valid-text-dark: #005c87;
  --color-mri-select-token-valid-text-bg: #1790ce;
  --color-mri-token-invalid-bg: #e23101;
  --color-mri-token-pending-bg: #777777;
  --color-mri-token-valid-border: #223a80;
  --color-mri-token-invalid-border: #333333;
  --color-mri-token-pending-border: #494949;
  --color-mri-info: #007cc0;
  --color-mri-error: #c00000;
  --color-mri-warning: #f9a429;
  --color-mri-contrast: var(--color-primary, #000080);
  --color-mri-select-list-item-hoverable-light: #f0f0f0;
  --color-mri-dropdown-list-item-selected: #ebf2f9;
  --color-mri-dropdown-label-dark-text: #000000;
  --color-mri-dropdown-border-light: #c0c0c0;
  --color-mri-box-shadow: #000000;
  --color-mri-box-shadow-glow: 0.85;
  --color-ui-highlight: #ebf2f9;
  --color-mri-light-hover-bg: #bababa;
  --color-link-text: #00679e;
  --color-checkbox: #000080;
  --color-segmented-button-text: #00679e;
  --color-segmented-button-select-text: #ffffff;
  --color-mri-button-border: none;
  --color-mri-button-hover: var(--color-primary, #000080);
  --color-mri-button-hover-dark: var(--color-primary, #000080);
  --color-table-col-grip-hover: #e6f2f9;
  --color-mri-chart-button-hover: var(--color-neutral-lightest, #f2f0f1);

  --color-mri-card-header-bg: #ebf2f9;
  --color-mri-card-header-border: #d9e6f0;
  --color-mri-header-text-dark: var(--color-primary, #1f425a);
  --color-mri-header-text-light: #4d6f8c;
  --color-mri-nav-tab: #1f425a;
  --color-mri-footer-bg: var(--color-primary, #1f425a);
  --color-mri-header-bg: #2f3c48;
  --color-mri-footer-container-bg: #edf2fa;
  --color-footer-button-text-light: #ffffff;
  --color-footer-hover-button-background-color: var(--color-primary, #000080);
  --color-footer-active-button-background-color: #91c8f6;
  --color-footer-active-button-text-color: #2f3c48;
  --color-footer-border: #ebebeb;

  --color-dialog-box-footer-bg: var(--color-primary, #000080);
  --color-dialog-box-footer-shadow: #4f667a;
  --color-dialog-box-footer-btn-emphasized-bg-color: #5496cd;
  --color-dialog-box-footer-btn-transparent-bg-color: none;
  --color-dialog-box-footer-btn-accept-bg-color: #96dc95;
  --color-dialog-box-footer-btn-decline-bg-color: #ff5350;
  --color-dialog-box-footer-btn-text-light: #ffffff;
  --color-dialog-box-footer-btn-text-dark: #2f3c48;
  --color-dialog-box-footer-border: #418ac7;

  --color-table-header-row-bg: var(--color-neutral-lightest, #f2f0f1);
  --color-table-row-bg: #f9f9f9;
  --color-table-row-border: #e7e7e7;
  --color-table-body-color: var(--color-neutral, #595757);

  --color-tab-bar-header-bg: #bbd1ed;

  --color-toggle-button-light-bg: var(--color-secondary-lighter, #ffd0ce);
  --color-toggle-button-dark-bg: var(--color-primary, #000080);
  --color-selected-date-border: #ab218e;
  --color-date-hover: #d8d8d8;

  --color-filtercard-new-state: #115693;
  --color-date-error-text-bg: #ffc0cb;
  --color-hover-border: #427cac;

  --color-cardinality-all: var(--color-primary);
  --color-cardinality-any: #e75248;
  --color-cardinality-at-least: #2686eb;
  --color-cardinality-at-most: #fa9087;
  --color-cardinality-exactly: #000000;
}
/* ... */

